// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar component renders a progress bar using default props 1`] = `
.sxifhea {
  border-radius: 25px;
  height: 12px;
  position: relative;
  overflow: hidden;
  width: 100%;
}

.sxifhea4bknw--c2 {
  border: 1px solid var(--colors-tonal400);
  background: white;
  color: var(--colors-primary500);
}

.sxypqsd {
  box-sizing: border-box;
  position: absolute;
  background-color: currentcolor;
  height: 100%;
}

<div>
  <div
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="sxifhea sxifhea03kze--appearance-outline sxifhea03kze--theme-primary sxifhea4bknw--c2"
    data-max="100"
    data-radix-progress=""
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="sxypqsd"
      data-max="100"
      data-radix-progress-indicator=""
      data-state="indeterminate"
      style="width: 50%;"
    />
  </div>
</div>
`;

exports[`ProgressBar component renders a solid progress bar 1`] = `
.sxifhea {
  border-radius: 25px;
  height: 12px;
  position: relative;
  overflow: hidden;
  width: 100%;
}

.sxifhea4bknw--c2 {
  border: 1px solid var(--colors-tonal400);
  background: white;
  color: var(--colors-primary500);
}

.sxifhea4qfa7--c2 {
  border: 1px solid var(--colors-tonal400);
  background: white;
  color: var(--colors-secondary500);
}

.sxifheamrg77--c2 {
  background: var(--colors-tonal300);
  color: var(--colors-primary500);
}

.sxypqsd {
  box-sizing: border-box;
  position: absolute;
  background-color: currentcolor;
  height: 100%;
}

<div>
  <div
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="sxifhea sxifhea03kze--appearance-solid sxifhea03kze--theme-primary sxifheamrg77--c2"
    data-max="100"
    data-radix-progress=""
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="sxypqsd"
      data-max="100"
      data-radix-progress-indicator=""
      data-state="indeterminate"
      style="width: 50%;"
    />
  </div>
</div>
`;
